--- a/extensions/chat-window/assets/index.html
+++ b/extensions/chat-window/assets/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
+
     <style>
       .parentWrapper {
         width: 100%;
@@ -122,51 +121,13 @@
         height: 25px;
       }
     </style>
-    <div
-      class="parentWrapper"
-      style="
-        width: 100%;
-        padding: 3rem 0;
-        margin: 0;
-        background: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      "
-    >
-      <div
-        class="container"
-        style="
-          width: 50%;
-          padding: 3rem;
-          margin: 0 auto;
-          background: #faf7f4;
-          border-radius: 10px;
-          box-shadow: 0px 0px 10px 1px #e4e4e4;
-        "
-      >
-        <h5
-          style="
-            font-family: sans-serif;
-            font-size: 20px;
-            line-height: 22px;
-            font-weight: 450;
-          "
-        >
-          Canceling Your Order
-        </h5>
+  </head>
+  <body>
+    <div class="parentWrapper">
+      <div class="container">
+        <h5>Canceling Your Order</h5>
 
-        <p
-          style="
-            font-family: sans-serif;
-            font-size: 13px;
-            line-height: 20px;
-            font-weight: 400;
-          "
-        >
-          Hi ${first_name},
-        </p>
+        <p>Hi ${first_name},</p>
         <br />
 
         <p
